<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Al-Ruqyah Al-Shamila</string>

    <string name="shortcut_audio_short">Audio Ruqyah</string>
    <string name="shortcut_audio_long">Start audio Ruqyah</string>

    <string name="shortcut_dhikr_short">Dhikr</string>
    <string name="shortcut_dhikr_long">Tasbih counter and dhikr</string>

    <string name="shortcut_kursi_short">Ayat Al-Kursi</string>
    <string name="shortcut_kursi_long">Read Ayat Al-Kursi</string>
</resources>
